--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
-@import "bootstrap/scss/bootstrap";
+@use "bootstrap" as *;
+
+:root {
+  --header-font-family: Rubik, sans-serif;
+  --color-text: #ffffff;
+  --background-color: #3a5a73;
+}
+
+body {
+  background-color: var(--background-color);
+  color: var(--color-text);
+}
+
+html, body {
+  font-family: var(--header-font-family), serif;
+}
