--- a/src/app/components/video-card/video-card.scss
+++ b/src/app/components/video-card/video-card.scss
@@ -11,6 +11,11 @@
   z-index: 2;
 }
 
+.video-card-link {
+  text-decoration: none;
+  display: block;
+  color: inherit;
+}
 
 .img-wrapper {
   position: relative;
