added thumbnail fade in

--- a/src/app/components/video-card/video-card.html
+++ b/src/app/components/video-card/video-card.html
@@ -11,6 +11,7 @@
       alt="{{ item.heading || item.title }}"
       fill
       loading="lazy"
+      (load)="onImgLoad($event)"
     />
   </div>
   </a>
