--- a/src/app/components/video-card/video-card.scss
+++ b/src/app/components/video-card/video-card.scss
@@ -25,9 +25,15 @@
 }
 
 .fill-img {
-  object-fit: cover;
   width: 100%;
   height: 100%;
+  object-fit: cover;
+  opacity: 0;
+  transition: opacity 0.6s ease-in;
+}
+
+.fill-img.loaded {
+  opacity: 1;
 }
 
 .video-card {
